--- a/package.json
+++ b/package.json
@@ -4,5 +4,20 @@
   "main": "index.js",
   "repository": "git@github.com:aggierosa/FacilitaTransporte.git",
   "author": "Tiago <m.tiago@outlook.com.br>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "pd": "^0.8.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.6",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.34",
+    "@types/uuid": "^8.3.4",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.4"
+  }
 }
