--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FacilitaTransporte",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.ts",
   "repository": "git@github.com:aggierosa/FacilitaTransporte.git",
   "author": "Tiago <m.tiago@outlook.com.br>",
   "license": "MIT",
@@ -9,6 +9,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pd": "^0.8.1",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
