--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
+  "scripts": {
+    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/app.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "start": "node dist/src/server.js",
+    "build": "tsc",
+    "test": "jest"
+  },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
