--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "pd": "^0.8.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
