--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://grupotreze:postgres@localhost:5432/facilita_transporte
+DATABASE_URL=postgres://aggierosa:agnes1ana2@localhost:5432/facilita_transporte
