--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "pd": "^0.8.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.8.0",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
