--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Tiago <m.tiago@outlook.com.br>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "pd": "^0.8.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
