--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "author": "Tiago <m.tiago@outlook.com.br>",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^27.5.1",
+    "@types/supertest": "^2.0.12",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "express-yup-middleware": "^1.2.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.8.0",
     "typeorm": "^0.3.6",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "dev": "ts-node-dev --inspect --ignore-watch node_modules src/app.ts",
@@ -26,6 +31,10 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
     "@types/uuid": "^8.3.4",
+    "jest": "^28.1.0",
+    "sqlite3": "^5.0.8",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   }
