--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgres://aggierosa:agnes1ana2@localhost:5432/facilita_transporte
+<!-- DATABASE_TEST=postgres://aggierosa:agnes1ana2@localhost:5432/testes -->
