--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FacilitaTransporte",
+  "name": "facilitatransporte",
   "version": "1.0.0",
   "main": "src/app.ts",
   "repository": "git@github.com:aggierosa/FacilitaTransporte.git",
@@ -26,6 +26,7 @@
     "@types/node": "^17.0.34",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "yup": "^0.32.11"
   }
 }
