--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --ignore-watch node_modules src/app.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "start": "node dist/src/server.js",
+    "start": "node src/server.ts",
     "build": "tsc",
     "test": "jest"
   },
