--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,20 @@ services:
     build: .
     ports:
       - 3333:3333
-    depends_on:
-      - capstone_database
+
     environment:
-      - DB_USERNAME=grupotreze
+      - DATABASE_URL=postgres://postgres:password@capstone_database:5432/facilita_transporte
+      - DB_USERNAME=postgres
       - DB_HOST=capstone_database
       - DB=facilita_transporte
-      - DB_PASSWORD=postgres
+      - DB_PASSWORD=password
       - DB_PORT=5432
   capstone_database:
     container_name: capstone_database
     image: postgres:12
     ports:
-      - 5432:5432
+      - 5431:5432
     environment:
-      - POSTGRES_USER=grupotreze
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
       - POSTGRES_DB=facilita_transporte
