--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Tiago <m.tiago@outlook.com.br>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/app.ts",
+    "dev": "ts-node-dev src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "start": "node dist/src/server.js",
+    "start": "node dist/src/server.ts",
     "build": "tsc",
     "test": "jest"
   },
@@ -22,10 +22,12 @@
     "sqlite3": "^5.0.8",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.3",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.8.0",
+    "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@types/node": "^17.0.35",
     "bcryptjs": "^2.4.3",
     "class-transformer": "0.5.1",
     "dotenv": "^16.0.0",
