--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "start": "node dist/src/server.ts",
+    "start": "node dist/server.ts",
     "build": "tsc",
     "test": "jest"
   },
