fix: nomenclature fixes

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://ravi:220294@localhost:5432/facilita_transporte
+DATABASE_URL=postgres://Win10:agnes1ana2@localhost:5432/facilita_transporte
